Wait for cart updates and add a Windows smoke runner
Confirm button and badge changes after one add/remove click, suppress password prompts in Chrome's temporary automation profile, and include the current page in failure evidence.

Add a double-click Windows smoke runner with report archiving and correct PowerShell instructions. Preserve all existing UI assertions and suites.

Validation: Java 17 compilation and four browser-free regression checks passed. Live browser verification is still required; Chrome startup is blocked in the repair environment.